Integrated CSV download for vendors results Integrated Agencies Filter Integrated Place of Performance Filter Integrated Vendor Contract Filter Fixed some bugs Added Eligible Service Categories for vendors list results

--- a/app/frontend/src/app/app.component.html
+++ b/app/frontend/src/app/app.component.html
@@ -96,69 +96,6 @@
     <router-outlet></router-outlet>
     <!-- {% endverbatim %} -->
   </main>
-  <!-- START Footer -->
-  <!-- <footer class="usa-footer usa-footer-medium" role="contentinfo">
-    <div class="usa-grid usa-footer-return-to-top">
-      <a href="#">Return to top</a>
-    </div>
-    <div class="usa-footer-primary-section">
-      <div class="usa-grid">
-        <nav class="usa-footer-nav">
-          <ul class="usa-unstyled-list">
-            <li class="usa-width-one-sixth usa-footer-primary-content">
-              <a class="usa-footer-primary-link" [routerLink]="['/']">Home</a>
-            </li>
-            <li class="usa-width-one-sixth usa-footer-primary-content">
-              <a class="usa-footer-primary-link" [routerLink]="['/search']">Advanced Search</a>
-            </li>
-            <li class="usa-width-one-sixth usa-footer-primary-content">
-              <a class="usa-footer-primary-link" [routerLink]="['/about']">About</a>
-            </li>
-            <li class="usa-width-one-sixth usa-footer-primary-content">
-              <a class="usa-footer-primary-link" [routerLink]="['/resources']">Resources</a>
-            </li>
-            <li class="usa-width-one-sixth usa-footer-primary-content">
-              <a class="usa-footer-primary-link" [routerLink]="['/help']">Help</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </div>
-
-    <div class="usa-footer-secondary_section">
-      <div class="usa-grid">
-        <div class="usa-footer-logo usa-width-one-half">
-          <img src="assets/images/gsa-logo.jpg" width="60" height="60px" alt="GSA">
-          <h3 class="usa-footer-logo-heading">U.S. General Services Administration</h3>
-        </div>
-        <div class="usa-footer-contact-links usa-width-one-half">
-          <a class="usa-link-facebook" href="javascript:void(0);">
-            <span>Facebook</span>
-          </a>
-          <a class="usa-link-twitter" href="javascript:void(0);">
-            <span>Twitter</span>
-          </a>
-          <a class="usa-link-youtube" href="javascript:void(0);">
-            <span>YouTube</span>
-          </a>
-          <a class="usa-link-rss" href="javascript:void(0);">
-            <span>RSS</span>
-          </a>
-          <h3 class="usa-footer-contact-heading">Discovery.gsa.gov</h3>
-          <address>
-            <div class="usa-footer-primary-content usa-footer-contact_info">
-              <p>
-                <a href="tel:1-800-555-5555">(800) CALL-GOVT</a>
-              </p>
-            </div>
-            <div class="usa-footer-primary-content usa-footer-contact_info">
-              <p><a href="mailto:pshc-dev@gsa.gov">pshc-dev@gsa.gov</a></p>
-            </div>
-          </address>
-        </div>
-      </div>
-    </div>
-  </footer> -->
 
   <footer class="usa-section usa-section-dark usa-graphic_list">
     <div class="usa-grid">
@@ -212,7 +149,7 @@
       <div class="usa-width-one-fourth">
         <h3>Your Opinion Matters!</h3>
         <p>Tell us what you think by submitting
-          <a href="#">feedback</a>.</p>
+          <a href="mailto:pshc-dev@gsa.gov">feedback</a>.</p>
       </div>
 
     </div>
