--- a/app/frontend/src/app/pages/search/tbl-vendors.component.html
+++ b/app/frontend/src/app/pages/search/tbl-vendors.component.html
@@ -1,22 +1,23 @@
 <div *ngIf="!loading">
 
     <div class="text-right pad-top-bottom">
+
         <button class="usa-button-secondary" (click)="toggleSBD()">{{!sbd_col
             ?
             'Show' : 'Hide'}} Small Business Designation</button>
     </div>
     <div>
-        <h3 class="alt"><strong>{{items_total}} vendors</strong> meet your criteria.</h3>
+        <h3 class="alt"><a href="vendors/csv{{params}}" class="pull-right" target="_blank">
+                Download
+                vendor data(CSV)</a><strong>{{items_total}} vendors</strong> meet your criteria.</h3>
     </div>
     <table class="usa-table-borderless">
         <thead>
             <tr>
                 <th></th>
                 <th scope="col">Company</th>
-                <!-- <th scope="col"></th> -->
+                <th scope="col" [hidden]="service_categories_selected.length===0">Eligible Service Categories</th>
                 <th scope="col" class="sbd">Contracts</th>
-                <!-- <th scope="col">POC Email</th>
-                            <th scope="col">Capability Statement</th> -->
                 <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Small Disadvantaged Business">SB</th>
                 <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Small Disadvantaged Business">SDB</th>
                 <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="8(A)">8(A)</th>
@@ -34,7 +35,9 @@
                 <td><span [innerHTML]="getRowNum(i)"></span>.</td>
                 <td scope="row"><a (click)="showVendorDetails(item.duns)">{{item.name
                         | titlecase}}</a></td>
-                <!-- <td [innerHTML]="showPoolMeetCriteria(item.pools)"></td> -->
+                <td [hidden]="service_categories_selected.length===0"><span [innerHTML]="poolMeetCriteria(item.pools_ids)"></span>
+
+                </td>
                 <td>{{item.contracts}}</td>
                 <td [class.hide]="!sbd_col" class="sbd" [innerHtml]="returnSetAside(item.setasides, 'SB') ? '&bull;' : ''"></td>
                 <td [class.hide]="!sbd_col" class="sbd" [innerHtml]="returnSetAside(item.setasides, '27') ? '&bull;' : ''"></td>
